force-app/main/default/objects/Deal__c/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <description
  >Annual Contract Value (MRR * Term &quot;If Term is Greater Than 12 months this is 12, if Term is Less Than or Equal to 12 months this is number of months&quot;)</description>
    <label>ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>