force-app/main/default/objects/Deal__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <description>Date when Deal has been closed</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>