force-app/main/default/objects/Deal__c/fields/Contact_SafeID__c.field-meta.xml
<CustomField>
    <fullName>Contact_SafeID__c</fullName>
    <description
  >Used to populated the 18 digit ID from the Contact that was converted to this Opportunity.</description>
    <label>Contact SafeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>