force-app/main/default/objects/Deal__c/fields/Conv_OPP__c.field-meta.xml
<CustomField>
    <fullName>Conv_OPP__c</fullName>
    <description
  >Formula to calculate number of months to conversion.</description>
    <formula>IF(
    ISPICKVAL(Created_Rating__c, &quot;Lead 2&quot;),
        IF(DATEVALUE(CreatedDate)&lt;Lead_2_Date__c, -1,
        ((YEAR(DATEVALUE(CreatedDate)) - YEAR(Lead_2_Date__c))*12) + (MONTH(DATEVALUE(CreatedDate)) - MONTH(Lead_2_Date__c))),
    IF(DATEVALUE(CreatedDate)&lt;Released_to_Cadence__c, -1,
    ((YEAR(DATEVALUE(CreatedDate)) - YEAR(Released_to_Cadence__c))*12) + (MONTH(DATEVALUE(CreatedDate)) - MONTH(Released_to_Cadence__c)))
)</formula>
    <label>Conv_OPP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>