force-app/main/default/objects/Deal__c/fields/Converted_from_Contact__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to tell if an Opportunity was created from a Contact.</description>
    <label>Converted from Contact</label>
    <type>Checkbox</type>
</CustomField>