force-app/main/default/objects/Deal__c/fields/Converted_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to tell if an opportunity or contact was created from a Lead conversion.</description>
    <label>Converted from Lead</label>
    <type>Checkbox</type>
</CustomField>