force-app/main/default/objects/Deal__c/fields/Cycle_Type__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Type__c</fullName>
    <description>Used to tell if the Lead or Contact is in a new sales cycle or a rework sales cycle.</description>
    <label>Cycle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cycle_Type</valueSetName>
    </valueSet>
</CustomField>