force-app/main/default/objects/Deal__c/fields/Cycle_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Type_ID__c</fullName>
    <description>Used to tell if this is a new or rework cycle on a Lead or Contact for SellScience.</description>
    <formula>CASE(
    Cycle_Type__c,
    &quot;New - Lead&quot; , &quot;7ea3d6e3caa94e07a5a8f20a864d6f23&quot;,
    &quot;Rework - Lead&quot; , &quot;c6faa56d91224e06a79783428474c5c7&quot;,
    &quot;New - Contact&quot; , &quot;fb9489e422904a2f964c604dcad51b4d&quot;,
    &quot;Rework - Contact&quot; , &quot;05e7ce3501f14dfbbdce2857cba57cc2&quot;,
NULL)</formula>
    <label>Cycle Type ID</label>
    <type>Text</type>
</CustomField>