force-app/main/default/objects/Deal__c/fields/Deal_SafeID__c.field-meta.xml
<CustomField>
    <fullName>Deal_SafeID__c</fullName>
    <description>Used to populated the 18 digit ID vs 15 digit for API access.</description>
    <formula>CASESAFEID(Id)</formula>
    <label>Deal SafeID</label>
    <type>Text</type>
</CustomField>