force-app/main/default/objects/Deal__c/fields/Don_t_Overwrite_Source__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Overwrite_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A simple way to feed source data directly and avoid being overwritten via an automation.</description>
    <label>Don&apos;t Overwrite Source</label>
    <type>Checkbox</type>
</CustomField>