force-app/main/default/objects/Deal__c/fields/ForecastCategory__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategory__c</fullName>
    <description>Used to pull up the furthest related opportunity&apos;s Forecast Category for this Deal.</description>
    <label>Forecast Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>