force-app/main/default/objects/Deal__c/fields/ForecastCategoryName__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategoryName__c</fullName>
    <description>Used for data extraction for SellScience</description>
    <formula>ForecastCategory__c</formula>
    <label>Forecast Category Name</label>
    <type>Text</type>
</CustomField>