force-app/main/default/objects/Deal__c/fields/Funnel_Group__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Group__c</fullName>
    <description>Used for scaleMatters&apos; SellScience to group into funnels.</description>
    <label>Funnel Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Funnel_Group</valueSetName>
    </valueSet>
</CustomField>