force-app/main/default/objects/Deal__c/fields/FYCV__c.field-meta.xml
<CustomField>
    <fullName>FYCV__c</fullName>
    <description>First Year Contract Value (ACV + One-Time Fee)</description>
    <label>FYCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>