force-app/main/default/objects/Deal__c/fields/Industry_View__c.field-meta.xml
<CustomField>
    <fullName>Industry_View__c</fullName>
    <description
  >Operational views segmented by off Industry for scaleMatters</description>
    <label>Customer Industry View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry_View</valueSetName>
    </valueSet>
</CustomField>