force-app/main/default/objects/Deal__c/fields/IsCertifiedDeal__c.field-meta.xml
<CustomField>
    <fullName>IsCertifiedDeal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by scaleMatters if the customer org has a post sales stage used by CS, Finance, etc. to state if a deal has been certified and booked.</description>
    <label>IsCertifiedDeal</label>
    <type>Checkbox</type>
</CustomField>