force-app/main/default/objects/Deal__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to tell if the Deal is closed or not</description>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>