force-app/main/default/objects/Deal__c/fields/IsWon__c.field-meta.xml
<CustomField>
    <fullName>IsWon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies that the Deal has been won</description>
    <label>Won</label>
    <type>Checkbox</type>
</CustomField>