force-app/main/default/objects/Deal__c/fields/Last_Stage_Before_Loss__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Before_Loss__c</fullName>
    <description
  >Used to state what is/was the last stage an opportunity reached before a loss status.</description>
    <label>Last Stage Before Loss</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>