force-app/main/default/objects/Deal__c/fields/Lead_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_1_Date__c</fullName>
    <description>Date when Lead Rating = Lead 1</description>
    <label>Lead 1 Date</label>
    <type>Date</type>
</CustomField>