force-app/main/default/objects/Deal__c/fields/Lead_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Lead_SafeId__c</fullName>
    <description
  >Used to populated the 18 digit ID from the Lead that was converted to this Opportunity.</description>
    <label>Lead SafeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>