force-app/main/default/objects/Deal__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Tied to the source of the Deal</description>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead Source 1</fullName>
            </value>
            <value>
                <fullName>Lead Source 2</fullName>
            </value>
            <value>
                <fullName>Lead Source 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>