force-app/main/default/objects/Deal__c/fields/Meeting_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Disposition__c</fullName>
    <description
  >Used to get a final disposition if a meeting happened or not with the Lead or Contact.</description>
    <label>Meeting Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Meeting_Disposition</valueSetName>
    </valueSet>
</CustomField>