force-app/main/default/objects/Deal__c/fields/Meeting_Rescheduled_Count__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Rescheduled_Count__c</fullName>
    <description>Used to count how many times the demo date changed.</description>
    <label>Meeting Rescheduled Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>