force-app/main/default/objects/Deal__c/fields/Meeting_Set__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Set__c</fullName>
    <description>Quick way to tell if a Meeting has been set or not.</description>
    <formula>IF(
    NOT(
        ISBLANK(Meeting_Date__c)
    ), 1,
    0
)</formula>
    <label>Meeting Set</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>