force-app/main/default/objects/Deal__c/fields/Meeting_Source_Role__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Source_Role__c</fullName>
    <description>Used to pull in the role of the meeting source.</description>
    <label>Meeting Source Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>