force-app/main/default/objects/Deal__c/fields/Meeting_Source_Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Source_Role_ID__c</fullName>
    <description>Used for scaleMatters SellScience to pass over a UID based on Role of Meeting Source.</description>
    <formula>CASE(
    Meeting_Source_Role__c,
    &quot;SDR&quot;,&quot;cfeb24f1c4204cb3a76c16364b6d8aa7&quot;,
    &quot;AE&quot;,&quot;97f25826d3bd4670acb6657ba2db04ec&quot;,
    &quot;Sales Manager&quot;,&quot;abaa02ffcefd48be9cc53a0cb305a90f&quot;,
    &quot;SDR Manager&quot;,&quot;bd3e558106b94781b2c1ecf3eb82df8a&quot;,
    &quot;Executive Leadership&quot;,&quot;3683ae746cc846989fe5c27706db889e&quot;,
    &quot;Customer Success&quot;,&quot;a8761f78876c4ec399e5d645fa8871fd&quot;,
    &quot;Operations&quot;,&quot;3f16785fd86d4b7ea0a2eda3aee9b40e&quot;,
    &quot;Other&quot;,&quot;a1c4445669254a6f944bfab089945408&quot;,
    NULL
)</formula>
    <label>Meeting Source Role ID</label>
    <type>Text</type>
</CustomField>