force-app/main/default/objects/Deal__c/fields/Number_of_Reworks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Reworks__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Count of the number of a times a record has been attempted to be reworked.</description>
    <label>Number of Reworks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>