force-app/main/default/objects/Deal__c/fields/OneTime_Fee__c.field-meta.xml
<CustomField>
    <fullName>OneTime_Fee__c</fullName>
    <description
  >Used to include a additional fees that are not recurring and not specifically included in Product One-Time Fee</description>
    <label>One-Time Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>