force-app/main/default/objects/Deal__c/fields/Opportunity_Discard__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Discard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Give you the ability to discard a record from scaleMatters.</description>
    <label>Opportunity Discard</label>
    <type>Checkbox</type>
</CustomField>