force-app/main/default/objects/Deal__c/fields/Opportunity_Sync__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to dictate if an opportunity should be picked by scaleMatters&apos;s SellScience or not.</description>
    <label>Opportunity Sync to SellScience</label>
    <type>Checkbox</type>
</CustomField>