force-app/main/default/objects/Deal__c/fields/Previous_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Populated when records (Leads/Account/Contacts/Opps) are mass re-assigned after an employee is terminated or leaves and updated with the Last Owner&apos;s user record.</description>
    <label>Previous Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>scaleMatters_Opps_Previous_Owner_rsp</relationshipName>
    <type>Lookup</type>
</CustomField>