force-app/main/default/objects/Deal__c/fields/Previous_Owner_Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner_Date_Changed__c</fullName>
    <description
  >Populated when records (Leads/Account/Contacts/Opps) are mass re-assigned after an employee is terminated or leaves and updated with the date of this change.</description>
    <label>Previous Owner Date Changed</label>
    <type>Date</type>
</CustomField>