force-app/main/default/objects/Deal__c/fields/Product_OneTime_Fee__c.field-meta.xml
<CustomField>
    <fullName>Product_OneTime_Fee__c</fullName>
    <description
  >Used when a customer sells perpetual license or hardware</description>
    <label>Product One-Time Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>