force-app/main/default/objects/Deal__c/fields/Released_to_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Released_to_Cadence__c</fullName>
    <description>Date when a record started getting worked.</description>
    <label>Released to Cadence Date</label>
    <type>Date</type>
</CustomField>