force-app/main/default/objects/Deal__c/fields/S10_Date__c.field-meta.xml
<CustomField>
    <fullName>S10_Date__c</fullName>
    <description>Date when the opportunity moved to Stage 10</description>
    <label>Opp Stage 10 Date</label>
    <type>Date</type>
</CustomField>