force-app/main/default/objects/Deal__c/fields/S10_Value__c.field-meta.xml
<CustomField>
    <fullName>S10_Value__c</fullName>
    <description>Value when the opportunity moved to Stage 10</description>
    <label>Opp Stage 10 Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>