force-app/main/default/objects/Deal__c/fields/S2_Date__c.field-meta.xml
<CustomField>
    <fullName>S2_Date__c</fullName>
    <description>Date when the opportunity moved to Stage 2</description>
    <label>Opp Stage 2 Date</label>
    <type>Date</type>
</CustomField>