force-app/main/default/objects/Deal__c/fields/sM_DLD__c.field-meta.xml
<CustomField>
    <fullName>sM_DLD__c</fullName>
    <description
  >DATA LIVE DATE: This field defines the earliest date available for customer data analytics in SellScience.</description>
    <label>sM DLD</label>
    <type>Date</type>
</CustomField>