force-app/main/default/objects/Deal__c/fields/TCV__c.field-meta.xml
<CustomField>
    <fullName>TCV__c</fullName>
    <description>Total Contract Value ((ACV * Term) + Product One-Time Fee + One-Time Fee)</description>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>