force-app/main/default/objects/Deal__c/fields/Territory_View__c.field-meta.xml
<CustomField>
    <fullName>Territory_View__c</fullName>
    <description
  >Operational views segmented by off Territory for scaleMatters</description>
    <label>Sales Territory View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Territory_View</valueSetName>
    </valueSet>
</CustomField>